--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "type": "module",
   "scripts":{
       "build": "tsc --watch",
-      "start": "npm run build",
-      "type": "module"
+      "start": "npm run build"
   }
 }
